Add game logic and DOM manipulation
Now there is one function that updates the gameBoard js object and shows
selection on the screen.
A second function (gameOver) checks if all values in the gameBoard
object are non-empty strings

A little feedback on the right-hand side

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -15,11 +15,16 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   border-right: solid black 3px;
 }
 
-.row {
-  height: 30vh;
+.col-xs-4 {
+  height: 0;
+  padding-bottom: 30%;
   background-color: pink;
 }
 
-.col-xs-4 {
-  height: 30vh;
+body {
+  background-color: gray;
+}
+
+h1 {
+  text-align: center;
 }
