Create responsive Xs and Os
Ran into problems with saving stats like games won and tied, so
switched to responsive text. Woops! Committing this and then
switching to a more appropriately named branch.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,39 +28,39 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 .x {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   display: none;
 }
 
 .o {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   display: none;
 }
 
 .hover-x {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   opacity: 0.5;
   display: none;
 }
 
 .hover-o {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   opacity: 0.5;
   display: none;
 }
 
 .win-x {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   display: none;
 }
 
 .win-o {
   text-align: center;
-  font-size: 12em;
+  font-size: 12vw;
   display: none;
 }
 
