Make button that shows list of ids
Make button that shows list of ids

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -183,3 +183,12 @@ form {
 .game-over-message {
   font-size: 2.5vw;
 }
+
+.listids {
+  display: none;
+  margin-top: 1%;
+}
+
+.games-length {
+  margin-top: 1%;
+}
